2009-10-13  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/cms/cms.py:
	Convert cms.py to new `id' arguments.

2009-10-13  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/presentation/spec.py:
	Add `public' argument to ViewSpec.

2009-10-13  Milan Zamazal  <pdm@brailcom.org>

	* defs/menu.py:
	Another argument conversion in menu.py.

2009-10-13  Milan Zamazal  <pdm@brailcom.org>

	* defs/menu.py:
	* doc/tutorials/DmpDb:
	* lib/pytis/form/application.py:
	* lib/pytis/presentation/spec.py:
	* tools/genmenu.py:
	* tools/pytis-transform.el:
	Public/private specifications introduced.

2009-09-15  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/presentation/spec.py:
	Fix _spec_name naming conflict in spec.py.

2009-09-15  Milan Zamazal  <pdm@brailcom.org>

	* tools/genmenu.py:
	Fixes in genmenu.

2009-09-15  Milan Zamazal  <pdm@brailcom.org>

	* doc/tutorials/DmpDb:
	* tools/genmenu.py:
	Support ActionGroup's in genmenu.

2009-09-15  Milan Zamazal  <pdm@brailcom.org>

	* doc/tutorials/dmp:
	DMP admin documentation updated.

2009-09-15  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/presentation/spec.py:
	Read form actions rights from the database.

2009-09-15  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/presentation/spec.py:
	Fix column limiting of user rights by system rights.

2009-09-15  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	* doc/tutorials/DmpDb:
	* tools/genmenu.py:
	Use form names, not form actions, in form action fullnames and shortnames.

2009-09-15  Milan Zamazal  <pdm@brailcom.org>

	* tools/genmenu.py:
	Import form action access rights in genmenu.

2009-09-14  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Limit form actions access rights to the call right.

2009-09-14  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	* doc/tutorials/DmpDb:
	* tools/genmenu.py:
	Initial support for form actions in DMP.

2009-09-12  Milan Zamazal  <pdm@brailcom.org>

	* tools/pytis-transform.el: